name:                sql
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/felixschl/sql#readme
license:             BSD3
license-file:        LICENSE
author:              Felix Schlitter
maintainer:          felixschlitter@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable sql
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative
                     , text
                     , interpolatedstring-perl6
                     , directory
                     , filepath
                     , safe
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/felixschl/sql
